--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,14 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
     rgb(var(--background-start-rgb));
+}
+
+.table-header * {
+  font-weight: bold !important;
 }
