--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,8 @@
 .table-header * {
   font-weight: bold !important;
 }
+
+.custom-img {
+  background-image: url("/bg-image.jpg");
+  margin-top: -80px;
+}
